; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/enic/extr_enic_dev.c_enic_dev_del_station_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/enic/extr_enic_dev.c_enic_dev_del_station_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enic = type { i32, %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@EADDRNOTAVAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @enic_dev_del_station_addr(%struct.enic* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.enic*, align 8
  %4 = alloca i32, align 4
  store %struct.enic* %0, %struct.enic** %3, align 8
  %5 = load %struct.enic*, %struct.enic** %3, align 8
  %6 = getelementptr inbounds %struct.enic, %struct.enic* %5, i32 0, i32 1
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @is_valid_ether_addr(i32 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* @EADDRNOTAVAIL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %32

15:                                               ; preds = %1
  %16 = load %struct.enic*, %struct.enic** %3, align 8
  %17 = getelementptr inbounds %struct.enic, %struct.enic* %16, i32 0, i32 0
  %18 = call i32 @spin_lock(i32* %17)
  %19 = load %struct.enic*, %struct.enic** %3, align 8
  %20 = getelementptr inbounds %struct.enic, %struct.enic* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.enic*, %struct.enic** %3, align 8
  %23 = getelementptr inbounds %struct.enic, %struct.enic* %22, i32 0, i32 1
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @vnic_dev_del_addr(i32 %21, i32 %26)
  store i32 %27, i32* %4, align 4
  %28 = load %struct.enic*, %struct.enic** %3, align 8
  %29 = getelementptr inbounds %struct.enic, %struct.enic* %28, i32 0, i32 0
  %30 = call i32 @spin_unlock(i32* %29)
  %31 = load i32, i32* %4, align 4
  store i32 %31, i32* %2, align 4
  br label %32

32:                                               ; preds = %15, %12
  %33 = load i32, i32* %2, align 4
  ret i32 %33
}

declare dso_local i32 @is_valid_ether_addr(i32) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @vnic_dev_del_addr(i32, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
